methods.returning.MethodsReturning.scala.error
Compilation error:
MethodsReturning:28: error: Unmatched closing brace '}' ignored here
}
^